BugFix - ghosts getting stuck in their room, added ghostroom class and updated map

--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ header, h1 {
 }
 .blank {
   background: linear-gradient(to top left, rgb(7, 7, 7), rgb(15, 15, 16));
-  color: rgba(240, 248, 255, 0.057);
+  color: #f0f8ff0f;
   padding: 10px;
 }
 .wall{
@@ -83,6 +83,11 @@ header, h1 {
   border-radius: 50%;
   background-color: rgb(255, 255, 255);
 
+}
+.ghostroom {
+  background: linear-gradient(to top left, rgb(24, 24, 24), rgb(15, 15, 16));
+  color: #f0f8ff0f;
+  padding: 10px;
 }
 
 .hide {
